# HugeCTR

master/.doctrees/: QAList.doctree  additional_resources.doctree  environment.pickle  hugectr_contributor_guide.doctree  hugectr_core_features.doctree  hugectr_embedding_training_cache.doctree  hugectr_example_notebooks.doctree  hugectr_feature_details_intro.doctree  hugectr_parameter_server.doctree  hugectr_talks_blogs.doctree  hugectr_user_guide.doctree  index.doctree  release_notes.doctree
master/.doctrees/api/: hugectr_layer_book.doctree  index.doctree  python_interface.doctree
master/.doctrees/notebooks/: continuous_training.doctree  ecommerce-example.doctree  embedding_training_cache_example.doctree  hps_demo.doctree  hugectr2onnx_demo.doctree  hugectr_criteo.doctree  hugectr_wdl_prediction.doctree  index.doctree  movie-lens-example.doctree  multi_gpu_offline_inference.doctree  news-example.doctree  training_with_hdfs.doctree
sparse_operation_kit/: CMakeLists.txt  setup.py
sparse_operation_kit/cmakes/: FindNCCL.cmake
sparse_operation_kit/documents/tutorials/DLRM_Benchmark/: main.py  model.py  trainer.py
sparse_operation_kit/documents/tutorials/DenseDemo/: ReadMe.md  run_sok_MirroredStrategy.py  run_sok_MultiWorker_mpi.py  run_sok_horovod.py  run_tf.py
sparse_operation_kit/kit_cc/framework/compat/kernels/: gpu_device_functions.h  gpu_kernel_helper.h  unique.cu.cc  unsorted_segment_sum.cu.cc
sparse_operation_kit/kit_cc/framework/kernels/: bprop.cc  dense_fprop.cc  plugin_init.cc  sparse_fprop.cc  test_op.cu.cc
sparse_operation_kit/kit_cc/kit_cc_infra/include/: common.cuh  common.h  facade.h
sparse_operation_kit/kit_cc/kit_cc_infra/include/hashtable/: hashtable.h  identity_hashtable.h  nv_hashtable.h  nv_hashtable.hpp  simple_hashtable.h
sparse_operation_kit/kit_cc/kit_cc_infra/include/initializer/: constant_initializer.h  initializer_interface.h  random_uniform.h
sparse_operation_kit/kit_cc/kit_cc_infra/include/optimizer/: prepare_functions.h  update_functions.h
sparse_operation_kit/kit_cc/kit_cc_infra/include/resources/: event.h  event_manager.h  gpu_resource.h  manager.h
sparse_operation_kit/kit_cc/kit_cc_infra/include/tensor_buffer/: general_buffer2.hpp
sparse_operation_kit/kit_cc/kit_cc_infra/src/: common.cc  common.cu.cc  facade.cc
sparse_operation_kit/kit_cc/kit_cc_infra/src/hashtable/: identity_hashtable.cu.cc  nv_hashtable.cc  nv_hashtable.cu.cc  simple_hashtable.cu.cc
sparse_operation_kit/kit_cc/kit_cc_infra/src/initializer/: constant_initializer.cu.cc  random_uniform.cu.cc
sparse_operation_kit/kit_cc/kit_cc_infra/src/optimizer/: grad_update_preparer.cc  prepare_functions.cu.cc  update_functions.cu.cc
sparse_operation_kit/kit_cc/kit_cc_infra/src/parameters/: raw_param.cc
sparse_operation_kit/kit_cc/kit_cc_infra/src/resources/: event.cc  event_manager.cc  gpu_resource.cc  manager.cc
sparse_operation_kit/kit_cc_impl/embedding/common/include/: backward_functions.cuh  backward_functions.h  conversion_kernels.cuh  dumping_functions.h  forward_functions.cuh  forward_functions.h
sparse_operation_kit/kit_cc_impl/embedding/common/src/: backward_functions.cu.cc  dumping_functions.cc  dumping_functions.cu.cc  forward_functions.cu.cc
sparse_operation_kit/kit_cc_impl/embedding/dispatcher/: all2all_input_dispatcher.cu.cc  all2all_output_dispatcher.cu.cc  all_gather_dispatcher.cu.cc
sparse_operation_kit/kit_cc_impl/embedding/lookuper/: dense_gather.cu.cc  distributed.cc
sparse_operation_kit/kit_cc_impl/embedding/operation/: csr_conversion_distributed.cu.cc
sparse_operation_kit/sok_v1.1.3/.doctrees/: environment.pickle  index.doctree  intro_link.doctree
sparse_operation_kit/sok_v1.1.3/.doctrees/api/: index.doctree  init.doctree
sparse_operation_kit/sok_v1.1.3/.doctrees/api/embeddings/: index.doctree  saver.doctree  tf_distributed_embedding.doctree
sparse_operation_kit/sok_v1.1.3/.doctrees/api/embeddings/dense/: all2all.doctree  index.doctree
sparse_operation_kit/sok_v1.1.3/.doctrees/api/embeddings/sparse/: distributed.doctree  index.doctree
sparse_operation_kit/sok_v1.1.3/.doctrees/api/optimizers/: opts.doctree
sparse_operation_kit/sok_v1.1.3/.doctrees/api/utils/: index.doctree  opt_scope.doctree  opt_utils.doctree
sparse_operation_kit/sok_v1.1.3/.doctrees/env_vars/: env_vars.doctree
sparse_operation_kit/sok_v1.1.3/.doctrees/examples/: amp.doctree  dense_demo.doctree  dlrm.doctree  index.doctree
sparse_operation_kit/sok_v1.1.3/.doctrees/features/: features.doctree
sparse_operation_kit/sok_v1.1.3/.doctrees/get_started/: get_started.doctree
sparse_operation_kit/sok_v1.1.3/.doctrees/known_issues/: issues.doctree
sparse_operation_kit/sok_v1.1.3/.doctrees/performance/: dense_demo.doctree  dlrm.doctree  index.doctree
sparse_operation_kit/sok_v1.1.3/.doctrees/release_notes/: release_notes.doctree
sparse_operation_kit/unit_test/cc/: unit_tester.cc
sparse_operation_kit/unit_test/cc/kernels/: reduce_scatter_dispatcher.cc
v3.5/.doctrees/: QAList.doctree  additional_resources.doctree  environment.pickle  hugectr_contributor_guide.doctree  hugectr_core_features.doctree  hugectr_embedding_training_cache.doctree  hugectr_example_notebooks.doctree  hugectr_feature_details_intro.doctree  hugectr_parameter_server.doctree  hugectr_talks_blogs.doctree  hugectr_user_guide.doctree  index.doctree  release_notes.doctree
v3.6/.doctrees/: QAList.doctree  additional_resources.doctree  environment.pickle  hugectr_contributor_guide.doctree  hugectr_core_features.doctree  hugectr_embedding_training_cache.doctree  hugectr_feature_details_intro.doctree  hugectr_parameter_server.doctree  hugectr_talks_blogs.doctree  hugectr_user_guide.doctree  index.doctree  release_notes.doctree
v3.7/.doctrees/: QAList.doctree  additional_resources.doctree  environment.pickle  hugectr_contributor_guide.doctree  hugectr_core_features.doctree  hugectr_embedding_training_cache.doctree  hugectr_feature_details_intro.doctree  hugectr_parameter_server.doctree  hugectr_talks_blogs.doctree  hugectr_user_guide.doctree  index.doctree  release_notes.doctree
(+79 files in other folders)
